Add method for sub session event
